# geoxide

./: Cargo.toml
assets/: gebco.tif
assets/shader/: compute_tiff.wgsl  frag.wgsl
src/: compute.rs  main.rs  tiff_utils.rs
