[package]
name = "geoxide"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", features = ["bevy_dev_tools", "free_camera"] }
bytemuck = "1.25.0"
rayon = "1.11.0"
tiff = "0.11.2"
bevy_app_compute = { path = "/home/devnitrate/bevy_app_compute"  }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
